# Last-Mile-Fulfilment-Optimization

./: .env.example  .gitignore  Dockerfile  README.md  commands.md  docker-compose.yml  flow.md  flow_readme.md  oracle_cloud_setup.md  output.json  payload.json  pyproject.toml  requirements.txt  v2_changes.md
.github/workflows/: ci.yml  deploy.yml
airflow/: requirements.txt
airflow/dags/: fulfillment_pipeline_dag.py
config/: constants.py  warehouse_config.py
data_simulation/: backfill.py  backfill_extension.py  lambda_handler.py  upload_to_s3.py
data_simulation/core/: deliveries.py  dimensions.py  driver_activity.py  experiments.py  inventory.py  orders.py  shipments.py
data_simulation/state/: state_manager.py
data_simulation/utils/: cost.py  demand_model.py  geo.py  seasonality.py
dbt/: .user.yml  dbt_project.yml  profile_example.yml  profiles.yml
dbt/snapshots/: snap_customer.sql  snap_driver.sql  snap_product.sql  snap_supplier.sql
dbt/tests/: int_orders_cross_region_logic.sql  int_orders_experiment_fields_present.sql  mart_allocation_rate_bounds.sql  mart_capacity_stress_warning.sql  mart_cost_optimization_savings_math.sql  mart_experiment_significance_pvalue.sql  stg_deliveries_sla_breach_logic.sql  stg_deliveries_time_ordering.sql  stg_inventory_balance_equation.sql  stg_inventory_no_negative_stock.sql  stg_order_items_revenue_math.sql  stg_orders_vs_items_revenue_consistency.sql
docs/: tests.md
experimentation/: assignment_engine.py  run_experimentation.py  statistical_tests.py  uplift_analysis.py
experimentation/results/: uplift_EXP-001.csv  uplift_EXP-002.csv  uplift_EXP-003.csv  uplift_EXP-004.csv  uplift_EXP-005.csv  uplift_EXP-006.csv  uplift_EXP-007.csv  uplift_EXP-008.csv  uplift_EXP-009.csv  uplift_EXP-010.csv
great_expectations/: great_expectations.yml
great_expectations/checkpoints/: .ge_store_backend_id  mart_quality_checkpoint.yml  raw_load_checkpoint.yml  s3_landing_checkpoint.yml
ml/evaluation/: model_metrics.py
optimization/: cost_model.py  inventory_optimization.py  run_optimization.py  warehouse_allocation.py
spark/: config.py
streaming/: config.py  consumer_s3.py  consumer_snowflake.py  producer.py  schemas.py  topic_setup.py
terraform/: backend.tf  main.tf  outputs.tf  placeholder.py  providers.tf  variables.tf
tests/: test_simulation.py
(+84 files in other folders)
