[project]
name = "last-mile-fulfilment-optimization"
version = "0.1.0"
description = ""
authors = [
    {name = "Bhavyalikhitha",email = "bhavyalikhitha.bbl@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["numpy (==1.26.4)", "pandas (==2.2.1)", "boto3 (==1.34.69)", "python-dotenv (==1.0.1)"]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"