[project]
name = "last-mile-fulfilment-optimization"
version = "0.1.0"
description = ""
authors = [
    {name = "Bhavyalikhitha",email = "bhavyalikhitha.bbl@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["numpy (==1.26.4)", "pandas (==2.2.1)", "boto3 (==1.34.69)", "python-dotenv (==1.0.1)", "pyarrow (>=14.0.1)", "xgboost (>=3.2.0,<4.0.0)", "lightgbm (>=4.6.0,<5.0.0)", "prophet (>=1.3.0,<2.0.0)", "statsmodels (>=0.14.6,<0.15.0)", "scikit-learn (>=1.8.0,<2.0.0)", "snowflake-connector-python (>=4.3.0,<5.0.0)"]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"